[gd_scene load_steps=4 format=3 uid="uid://c7kxkfdsoe5hv"]

[ext_resource type="Script" uid="uid://cg6udjb2cyhqs" path="res://Scenes/UI/ObjectProperties/propertyUIelements/vector_property_editor.gd" id="1_oie7u"]
[ext_resource type="Theme" uid="uid://crsgo6pa7nv5x" path="res://Scenes/UI/theme/UItheme.tres" id="1_vgvs7"]

[sub_resource type="LabelSettings" id="LabelSettings_ebjba"]
font_size = 14

[node name="VectorPropertyEditor" type="Panel"]
custom_minimum_size = Vector2(0, 32)
script = ExtResource("1_oie7u")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Size:"
label_settings = SubResource("LabelSettings_ebjba")

[node name="xValueSpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vgvs7")
min_value = -9999999999999.0
max_value = 9999999999999.0
step = 0.2
allow_greater = true
allow_lesser = true
prefix = "X:"

[node name="yValueSpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_vgvs7")
min_value = -9999999999999.0
max_value = 9999999999999.0
step = 0.1
allow_greater = true
allow_lesser = true
prefix = "Y:"

[connection signal="value_changed" from="HBoxContainer/xValueSpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/xValueSpinBox" to="." method="_on_x_value_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/yValueSpinBox" to="." method="_on_y_value_spin_box_value_changed"]
